# typademic

./: .coveragerc  .gitignore  .travis.yml  ABOUT.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  HOWTO.md  LICENSE  LICENSE.md  LICENSE.rst  Makefile  README.md  README.rst  README.template.md  SECURITY.md  TODO.md  _config.yml  app.R  app.py  app_.py  boot.sh  codecov.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  example.env  generate_ssl.sh  github.md  google-analytics.html  markdown.md  package.json  pnpm-lock.yaml  pyproject.toml  report.Rmd  report.tex  (+7 more)
.circleci/: config.yml
.github/: issue_template.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: vulnerability_report.md
.github/workflows/: code-check.yml  codeql-analysis.yml  docker.yml  greetings.yml  label.yml
backend/: .gitignore  main.py  pyproject.toml
docs/: Bibliography.md  Makefile  Markdown.md  Pandoc.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
frontend/: package.json
latex/: default-1.17.0.2.tex
rsconnect/shinyapps.io/maehr/: typademic.dcf
src/: app.py  main.py
src/.streamlit/: config.toml
static/: manifest.json
templates/: 404.html  base.html  index.html
tests/: conftest.py  test_factory.py  test_typademic.py
typademic/: __init__.py  app.py  utils.py
typademic/errors/: __init__.py  handlers.py
typademic/templates/: base.html  index.html
typademic/templates/errors/: 400.html  404.html  429.html
typademic/uploads/: __init__.py  routes.py
