[tool.poetry]
name = "typademic"
version = "2.0.0-alpha"
description = "Typademic turns distraction freely written markdown files into beautiful PDFs."
authors = ["Moritz Mähr <moritz.maehr@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^0.87.0"
sh = "^1.14.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
pytest-runner = "^5.3.1"
watchdog = "^2.1.3"
isort = "^5.9.3"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
