[tool.poetry]
name = "typademic"
version = "2.0.0"
description = ""
authors = ["Moritz Mähr <moritz.maehr@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
minio = "^7.1.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.1.1"
pylint = "^2.13.5"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.pylint.format]
max-line-length = "88"
